--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>1.1.2</version>
+		</dependency>
 
 
 	</dependencies>
