--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.mode=LEGACYHTML5
 
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/library
+spring.datasource.url = jdbc:mysql://127.0.0.1:3307/library
 spring.datasource.username=root
-spring.datasource.password=root
-
+spring.datasource.password=blablabla
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
