--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>5.0.3.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
