--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://127.0.0.1:3307/library?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=blablabla
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/library?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=library
+spring.datasource.password=library
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
